# Final-Project-Pre-University

./: .gitignore  AGENTS.md  CMakeLists.txt  PRESENTATION_SUMMARY.md  PROJECT_STATUS.md  README.md
assets/backgrounds/: README.md
assets/data/: easy_words.txt  hard_words.txt  medium_words.txt
assets/fonts/: README.md
assets/ships/: README.md
assets/sounds/: README.md
assets/ui/: README.md
include/: AssetManager.h  Enemy.h  Game.h  GameScreen.h  Laser.h  Leaderboard.h  Particle.h  Player.h  ScoreManager.h  Targeting.h  WordManager.h
src/: AssetManager.cpp  Enemy.cpp  EnemyModel.cpp  Game.cpp  Laser.cpp  Leaderboard.cpp  Particle.cpp  Player.cpp  ScoreManager.cpp  Targeting.cpp  WordManager.cpp  main.cpp
tests/: CoreTests.cpp
tests/stubs/: raylib.h
